syntax="proto3";

package rp;

service Repair {
    rpc GetSrcData(GetSrcDataReq) returns (stream GetSrcDataAck){};
}

message GetSrcDataReq {
    int32  BlkId = 1 ;
    string SrcIp = 2;
    int32  SrcPort = 3;
    int32  ChkId = 4;
}
message GetSrcDataAck {
    bytes Databuf = 1;
}